manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: challenge-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4000
  selector:
    app: lk8s
