manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: challenge-ingress
spec:
  backend:
    serviceName: challenge-service
    servicePort: 80
